conceitoB/tests/shouldSucceed/test3.amen
preach int as somaUm(int as f_x1) {
    f_x1 giveth f_x1 + 1;
    amen f_x1;
};

baptize int as x0 giveth 0;
proclaim(x0);
prayAsLongAs(x0 < 5) {
    x0 giveth somaUm(x0);
    proclaim(x0);
};
proclaim(x0);